--- a/0x00-html_advanced/28-styleguide.html
+++ b/0x00-html_advanced/28-styleguide.html
@@ -30,7 +30,6 @@
                 <p>This is my subtitle</p>
                 <p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
             </section>
-
             <!-- Lists -->
             <section>
                 <header>
@@ -58,7 +57,17 @@
                         <dt>Water</dt>
                         <dd>A colorless, transparent, odorless liquid that forms the seas, lakes, rivers, and rain and is the basis of the fluids of living organisms.</dd>
                     </dl>
-                </div>                
+                </div>
+            </section>
+
+            <!-- Horizontal rule -->
+            <section>
+                <header>
+                    <h2>Horizontal rule</h2>
+                </header>
+                <div>
+                    <hr>
+                </div>
             </section>
         </main>
         <footer></footer>
